package edu.fiuba.algo3.modelo.casillero.Efecto;

import edu.fiuba.algo3.modelo.juego.Jugador;

public interface Efecto {
    public void aplicarseSobre(Jugador jugador);
}
